--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -504,6 +504,7 @@ feedback.saving = Saving...
 feedback.saved = All changes saved.
 feedback.error = Errors were detected. See cell notifications below.
 feedback.connectiontimeout = Unable to connect. Changes cannot be saved while offline.
+feedback.reordercolumnsfailed = An error occurred while reordering columns.
 
 ta.nopermission = You do not have permission to view the gradebook. Please contact your instructor.
 ta.roleswapped = TA view of gradebook cannot be displayed.
