--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -312,7 +312,7 @@ grade.notifications.haserror = An error occurred saving this item score.
 grade.notifications.overlimit = Score is over item's maximum point value and is providing extra credit.
 grade.notifications.concurrentedit = A concurrent edit has been detected. Please refresh the tool to view the latest scores.
 grade.notifications.concurrenteditbyuser = <span class="gb-concurrent-edit-user">{0}</span> edited this score at <span class="gb-concurrent-edit-time">{1}</span>. Please refresh the tool to view the latest scores.
-grade.notifications.isexternal = Gradebook item has been imported from an external tool and can only be edited from within that tool.
+grade.notifications.isexternal = Go to {0} tool to edit scores for this item.
 grade.notifications.invalid = Item score must be a positive number/decimal with a maximum of 10 integers and 2 decimal places.
 grade.notifications.readonly = Item score is read only
 grade.notifications.privileges = Insufficient privileges to edit this Gradebook item score
