--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -308,6 +308,7 @@ grade.menulabel = Open menu for student {0} and assignment {1} cell
 
 grade.notifications.hascomment = Gradebook item has comments
 grade.notifications.commentloading = Loading comment...
+grade.notifications.editcomment = Edit Comment
 grade.notifications.haserror = An error occurred saving this item score.
 grade.notifications.overlimit = Score is over item's maximum point value and is providing extra credit.
 grade.notifications.concurrentedit = A concurrent edit has been detected. Please refresh the tool to view the latest scores.
