--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -495,7 +495,8 @@ coursegrade.display.points-first = {0}/{1}
 coursegrade.display.points-second = [{0}/{1}]
 coursegrade.display.points-none = -
 coursegrade.display.none = -
-coursegrade.option.togglepoints = Toggle Points
+coursegrade.option.showpoints = Show Points
+coursegrade.option.hidepoints = Hide Points
 
 link.coursegradeoverride.revert.tooltip = Removes the course grade override and reverts to the calculated course grade
 link.coursegradeoverride.reverttocalculated = Revert to calculated course grade
