SAK-32769 rearrange the toolbar actions

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -46,9 +46,9 @@ label.gradeitem.categoryaverage={0} Weighted Average
 label.gradeitem.categoryheadertooltip=Category: {0}
 label.gradeitem.categoryweight=Category weight
 label.gradeitem.categoryandweightheadertooltip=Category: {0}, Weight: {1}
-label.toolbar.toggleitems=Show/Hide Items
+label.toolbar.toggleitems=View Columns
 label.toolbar.togglecategories=Group By Category
-label.toolbar.sortgradeitems=Change Sort Order
+label.toolbar.sortgradeitems=Item Order
 label.toolbar.gradeitemsummary=Showing <span class='gb-item-summary-counts'><span class='visible'>{0}</span> of <span class='total'>{1}</span></span> columns
 label.toolbar.gradeitemsummary-tooltip=Showing {0} of {1} columns ({2} of {3} items, {4} of {5} category averages)
 label.toolbar.studentsummarypaginated=Showing {0} to {1} of {2} students
@@ -68,6 +68,7 @@ label.toolbar.gradeitemhidethiscategoryscore=Hide this column
 label.toolbar.categorygroup.menulabel=Open menu for this category column
 label.toolbar.gradeitem.menulabel=Open menu for this Gradebook Item column
 label.toolbar.categoryaverage.menulabel=Open menu for this category score column
+label.toolbar.togglehelp=Toggle grade table and keyboard navigation help
 
 label.concurrentuserwarning=Please be aware a colleague has just made some changes to this Gradebook.<br>Refresh your page often to ensure you have the latest values.
 error.concurrentedit=Concurrent edits have been detected. Refresh the tool to see the latest scores.
