--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -79,6 +79,7 @@ column.header.students = Students
 column.header.coursegrade = Course Grade
 
 filter.students = Filter students
+filter.studentsclear = Clear student filter
 filter.groups = Filter by group/section
 
 button.addgradeitem = Add Gradebook Item
