--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -554,3 +554,5 @@ metadata.category=Category:
 metadata.categoryAverage=Category Average:
 metadata.flags=This score has the following flags:
 metadata.noflags=No notifications
+
+AutoLabel.CSS.required=required
